# textfur

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  com.text.fur.json
cmake/: CPack.cmake  Doxyqml.cmake
src/: CMakeLists.txt  README.md  TextRow.qml  animalquest.cpp  animalquest.h  athome.cpp  athome.h  catquest.cpp  catquest.h  changelog.cpp  changelog.h  character.cpp  character.h  character.hpp  clang-format  comfort.cpp  comfort.h  encounters.cpp  encounters.h  endgame.cpp  endgame.h  explorerandom.cpp  explorerandom.h  friends.cpp  friends.h  furvars.cpp  furvars.h  gamestart.cpp  gamestart.h  interface.cpp  interface.h  lizardquest.cpp  lizardquest.h  main.cpp  main.h  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.hpp  otterquest.cpp  (+5 more)
src/code/: CMakeLists.txt
src/code/character/: CMakeLists.txt  character.cpp  character.hpp
src/code/textmanager/: .textmanager.hpp.kate-swp  CMakeLists.txt  textmanager.cpp  textmanager.hpp
src/qml/: Character.qml  TextRow.qml  main.qml
